fix navbar dropdown z-index vs. .sticky-top

--- a/scss/darkroom-core/_darkroom-layout.scss
+++ b/scss/darkroom-core/_darkroom-layout.scss
@@ -299,6 +299,8 @@ html, body {
   }
 }
 
+.navbar-main .dropdown-menu { z-index: 1030; }
+
 .navbar-contextual .navbar-brand a,
 .navbar-contextual .navbar-brand a:hover,
 .navbar-contextual .navbar-brand a:focus {
